# IsingCauset

./: LICENSE.md  Makefile.am  README  active_tests  analysis.py  configure.ac  constants.h  dump.txt  test  visualisations.py
etc/: mkdat
inc/: CuResources.h  Makefile  Makefile.am  Makefile.in  causet.h  config.h  config.h.in  constants.h  operations.h  subroutines.h
par/: random2d.par
printcolor/: Makefile  Makefile.in
printcolor/.deps/: printcolor.Po
slurm/batch/: evol_slm
slurm/tests/: random2d
slurm/wrapper/: evol_wrp
src/: CuResources.cpp  Makefile  Makefile.am  Makefile.in  causet.cpp  subroutines.cpp
